Fixed: Display errors with new admin header when using menu in collapsed mode.
git-svn-id: https://plugins.svn.wordpress.org/ui-labs/trunk@410517 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/2-adminbar.css
+++ b/2-adminbar.css
@@ -2,7 +2,7 @@
   2.0 - New Admin Header
 ------------------------------------------------------------------------------*/
 
-#adminmenu .wp-menu-arrow, #adminmenu .wp-has-current-submenu .wp-submenu .wp-submenu-head {
+#adminmenu .wp-menu-arrow {
 	background:none!important;
 }
 #adminmenu .wp-menu-arrow div {
@@ -46,3 +46,8 @@
 #wphead h1 {font-size:14px;line-height:18px;}
 
 #screen-meta {margin-right:14px;}
+
+/*collapsed menu styles*/
+.js.folded #wpcontent, .js.folded #footer {
+	margin-left:34px;
+}
